--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>이준수 | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- 메인 스타일 -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -15,16 +14,14 @@
       <nav class="nav-links">
         <a href="#hero">Home</a>
         <a href="#about">About</a>
-        <a href="#education">Education</a>
         <a href="#projects">Projects</a>
-        <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
   </header>
 
   <main>
-    <!-- Hero 섹션 (구민정 포트폴리오 느낌) -->
+    <!-- Hero 섹션 -->
     <section id="hero" class="hero">
       <div class="hero-inner">
         <div class="hero-left"></div>
@@ -60,190 +57,258 @@
       <div class="container">
         <h2 class="section-title">About</h2>
         <p class="section-text">
-          공공데이터와 웹 데이터를 활용해 <b>어떤 문제를 해결할지</b> 먼저 정의하고,
-          그에 맞춰 데이터 수집·전처리·분석 과정을 설계합니다.<br />
-          분석 결과를 노트북 안에만 두지 않고,
-          <b>웹 서비스나 대시보드</b>로 만들어 실제로 사용할 수 있는 결과물을 만드는 것을 목표로 합니다.
+          공공데이터와 웹 데이터를 활용해 <b>“어떤 문제를 해결할 것인지”</b>를 먼저 정의하고,
+          그에 맞는 데이터 수집·전처리·분석 과정을 설계합니다. <br />
+          단순 리포트 작성에서 끝나지 않고,
+          <b>웹 서비스나 대시보드 형태</b>로 실제 사용자가 쓸 수 있는 결과물을 만드는 것을 목표로 합니다.
         </p>
       </div>
     </section>
 
-    <!-- Education -->
-    <section id="education" class="section">
-      <div class="container">
-        <h2 class="section-title">Education</h2>
-        <div class="edu-item">
-          <div class="edu-year">2023 – 재학 중</div>
-          <div class="edu-body">
-            <h3>간호학 전공</h3>
-            <p>
-              임상·보건 지식을 바탕으로 사람과 현장을 이해하는 관점을 가지고 데이터 분석과 개발을 함께 공부하고 있습니다.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Projects (왼쪽 메뉴 + 오른쪽 타임라인 카드) -->
+    <!-- Projects -->
     <section id="projects" class="section section-projects">
       <div class="container projects-layout">
         <!-- 왼쪽 메뉴 -->
         <aside class="projects-menu">
-          <a href="#education" class="menu-link">Education</a>
-          <a href="#skills" class="menu-link">Skills</a>
           <span class="menu-link active">— Projects</span>
         </aside>
 
         <!-- 오른쪽 프로젝트 리스트 -->
         <div class="projects-list">
 
-          <!-- 청주 교통사고 프로젝트 -->
+          <!-- 프로젝트 1: 청주 교통사고 -->
           <article class="project-item">
             <div class="project-icon">🛰️</div>
             <div class="project-content">
               <div class="project-meta">2025.10 – 2025.12</div>
               <h3 class="project-title">청주 교통사고 위험도 분석 & LLM 요약 서비스</h3>
               <p class="project-company">개인 프로젝트</p>
+
               <p class="project-desc">
-                청주시 교통사고 데이터를 기반으로 구·동별 위험도 점수를 계산하고,
-                LLM을 이용해 주요 위험 요인과 우선 대응 전략을 자동으로 요약하는 서비스입니다.
+                <b>1. 어떤 걸 만든 건지</b><br />
+                청주시 교통사고 데이터를 기반으로 구·동별 위험도 점수를 계산하고,<br />
+                LLM이 각 지역의 주요 위험 요인과 우선 대응 전략 3가지를 요약해 주는 웹 서비스입니다.
               </p>
+
+              <p class="project-desc">
+                <b>2. 왜 만들었는지</b><br />
+                기존 교통사고 분석은 단순 사고 건수/사망자 수 지도로 끝나는 경우가 많습니다.<br />
+                이 프로젝트에서는 <b>“행정 담당자가 바로 정책 아이디어를 얻을 수 있는 분석”</b>을 목표로,
+                위험도 점수와 함께 LLM이 <b>문장으로 전략을 제안</b>하도록 차별화를 두었습니다.
+              </p>
+
               <p class="project-detail">
-                <b>기술 스택 :</b> Python, Pandas, SQLite, Streamlit, OpenAI API<br />
-                <b>내 역할 :</b> 데이터 파이프라인 설계, 위험도 산식 정의, Streamlit UI, LLM 프롬프트 설계
+                <b>3. 내가 맡은 역할</b><br />
+                · 데이터 분석 & 백엔드 & 간단한 프론트엔드 전체를 혼자 구현<br />
+                · 교통사고 데이터 전처리, 위험도 산식 정의, Streamlit UI 구성<br />
+                · LLM 프롬프트 설계 및 요약 결과 튜닝
               </p>
+
+              <p class="project-detail">
+                <b>4. 인프라 구성</b><br />
+                · 데이터 분석: Jupyter Notebook + Pandas + SQLite<br />
+                · 웹 앱: Streamlit<br />
+                · 배포 & 버전 관리: GitHub 레포지토리 기반(로컬 실행 + 배포 확장 전제)
+              </p>
+
               <div class="project-tags">
                 <span>Data Pipeline</span>
                 <span>Streamlit</span>
                 <span>LLM</span>
               </div>
               <div class="project-links">
-                <a href="https://github.com/rjaekawpxm1-netizen/portfolio" target="_blank">GITHUB</a>
+                <a href="https://github.com/rjaekawpxm1-netizen/portfolio" target="_blank">GITHUB 레포 바로가기</a>
               </div>
             </div>
           </article>
 
-          <!-- 뉴스 감성 분석 -->
+          <!-- 프로젝트 2: 뉴스 감성 분석 -->
           <article class="project-item">
             <div class="project-icon">💬</div>
             <div class="project-content">
               <div class="project-meta">2025.08 – 2025.09</div>
               <h3 class="project-title">네이버 뉴스 댓글 감성 분석</h3>
               <p class="project-company">개인 프로젝트</p>
+
               <p class="project-desc">
-                네이버 뉴스 댓글을 크롤링해 이슈·기간별 감성 변화를 분석하고,
+                <b>1. 어떤 걸 만든 건지</b><br />
+                네이버 뉴스 댓글을 수집해 이슈·기간별 긍/부정 비율과 키워드 분포를 분석하고,<br />
                 대시보드로 시각화한 프로젝트입니다.
               </p>
-              <p class="project-detail">
-                <b>기술 스택 :</b> Python, Selenium, BeautifulSoup, KoNLPy, Power BI<br />
-                <b>내 역할 :</b> 크롤러 구현, 텍스트 전처리 파이프라인, 감성 지표 설계 및 시각화
+
+              <p class="project-desc">
+                <b>2. 왜 만들었는지</b><br />
+                이미 뉴스 요약 서비스는 많지만, <b>“사람들이 어떻게 반응했는지”</b>를 보여주는 서비스는 상대적으로 적습니다.<br />
+                이 프로젝트는 기사 내용보다 <b>댓글의 감정 흐름과 키워드 변화</b>에 초점을 맞춰
+                커뮤니티 분위기를 한눈에 볼 수 있도록 차별화했습니다.
               </p>
+
+              <p class="project-detail">
+                <b>3. 내가 맡은 역할</b><br />
+                · 크롤러 설계 및 구현 (Selenium + BeautifulSoup)<br />
+                · 형태소 분석/감성 사전 기반 감성 점수 계산 파이프라인 구축<br />
+                · Power BI를 활용한 시각화 대시보드 설계
+              </p>
+
+              <p class="project-detail">
+                <b>4. 인프라 구성</b><br />
+                · 데이터 수집: Python + Selenium 크롤링 스크립트<br />
+                · 저장: CSV & SQLite 혼합 사용<br />
+                · 분석/시각화: Jupyter Notebook → Power BI 연결<br />
+                · 코드 관리: GitHub 레포지토리
+              </p>
+
               <div class="project-tags">
                 <span>Crawling</span>
                 <span>NLP</span>
                 <span>Visualization</span>
               </div>
               <div class="project-links">
-                <a href="https://github.com/rjaekawpxm1-netizen/portfolio" target="_blank">GITHUB</a>
+                <a href="https://github.com/rjaekawpxm1-netizen/portfolio" target="_blank">GITHUB 레포 바로가기</a>
               </div>
             </div>
           </article>
 
-          <!-- 주문 데이터 RPA -->
+          <!-- 프로젝트 3: 주문 데이터 RPA -->
           <article class="project-item">
             <div class="project-icon">📦</div>
             <div class="project-content">
               <div class="project-meta">2025.07 – 2025.08</div>
               <h3 class="project-title">주문 데이터 자동 수집 & 매출 리포트 RPA</h3>
               <p class="project-company">개인 프로젝트</p>
+
               <p class="project-desc">
-                웹 주문 데이터를 자동으로 수집하고, 일·주간 매출 리포트를 생성해 슬랙으로 알림을 보내는 RPA 파이프라인입니다.
+                <b>1. 어떤 걸 만든 건지</b><br />
+                쇼핑몰 주문 데이터를 주기적으로 자동 수집해서<br />
+                일·주간 매출 리포트를 생성하고, 슬랙으로 결과를 보내는 RPA 파이프라인입니다.
               </p>
+
+              <p class="project-desc">
+                <b>2. 왜 만들었는지</b><br />
+                실제 운영에서는 담당자가 매일 엑셀을 내려받고 피벗 테이블을 만드는 반복 업무가 많습니다.<br />
+                이 프로젝트는 그런 반복 작업을 <b>완전히 자동화하는 엔드투엔드 파이프라인</b>을 만드는 데 초점을 두어,
+                “한 번 설정해두면 계속 돌아가는” 구조를 목표로 했습니다.
+              </p>
+
               <p class="project-detail">
-                <b>기술 스택 :</b> Python, Selenium/Requests, SQLite, Slack Webhook<br />
-                <b>내 역할 :</b> 전체 플로우 설계, 수집·집계 로직 구현, 리포트/알림 자동화
+                <b>3. 내가 맡은 역할</b><br />
+                · 전체 파이프라인 구조 설계<br />
+                · 주문 데이터 크롤링/수집 스크립트 구현<br />
+                · 매출 집계 로직 및 리포트 포맷 설계<br />
+                · Slack Webhook 연동으로 알림 자동화
               </p>
+
+              <p class="project-detail">
+                <b>4. 인프라 구성</b><br />
+                · 수집/집계 스크립트: Python<br />
+                · 스케줄링: OS 작업 스케줄러 기준으로 설계 (crontab/작업 스케줄러)<br />
+                · 저장소: CSV + SQLite<br />
+                · 알림: Slack Webhook<br />
+                · 코드 및 설정: GitHub 레포지토리 관리
+              </p>
+
               <div class="project-tags">
                 <span>RPA</span>
                 <span>Automation</span>
               </div>
               <div class="project-links">
-                <a href="https://github.com/rjaekawpxm1-netizen/portfolio" target="_blank">GITHUB</a>
+                <a href="https://github.com/rjaekawpxm1-netizen/portfolio" target="_blank">GITHUB 레포 바로가기</a>
               </div>
             </div>
           </article>
 
-          <!-- AI 스트레스 분석 앱 -->
+          <!-- 프로젝트 4: AI 스트레스 분석 앱 -->
           <article class="project-item">
             <div class="project-icon">🧠</div>
             <div class="project-content">
               <div class="project-meta">2025.01 – 진행 중</div>
               <h3 class="project-title">AI 기반 스트레스 분석 앱</h3>
               <p class="project-company">사이드 프로젝트</p>
+
               <p class="project-desc">
-                사용자가 텍스트로 기록한 일상을 분석해 스트레스 수준을 점수화하고,
-                간단한 행동 가이드를 제안하는 앱입니다.
+                <b>1. 어떤 걸 만든 건지</b><br />
+                사용자가 텍스트로 하루를 기록하면, LLM이 내용을 분석해<br />
+                스트레스 수준을 점수화하고 간단한 행동 가이드를 제안해 주는 앱입니다.
               </p>
+
+              <p class="project-desc">
+                <b>2. 왜 만들었는지</b><br />
+                단순 일기 앱은 많지만, <b>“내 상태를 숫자와 문장으로 피드백해 주는 서비스”</b>는 상대적으로 적습니다.<br />
+                이 프로젝트는 기록 자체보다 <b>기록 이후의 피드백</b>에 집중해서,
+                사용자가 자신의 스트레스 패턴을 이해하는 데 도움을 주고자 했습니다.
+              </p>
+
               <p class="project-detail">
-                <b>기술 스택 :</b> FastAPI, Python, OpenAI API, JWT 인증<br />
-                <b>내 역할 :</b> 백엔드 API 설계, 감정 분석 파이프라인, JWT 기반 인증 구조 설계
+                <b>3. 내가 맡은 역할</b><br />
+                · 백엔드 API 설계 및 구현 (FastAPI)<br />
+                · LLM 기반 감정/스트레스 분석 파이프라인 설계<br />
+                · JWT 기반 인증 및 세션 구조 설계
               </p>
+
+              <p class="project-detail">
+                <b>4. 인프라 구성</b><br />
+                · 백엔드: FastAPI (Python)<br />
+                · 인증: JWT + 간단한 사용자 관리<br />
+                · 모델 연동: OpenAI API 호출 레이어<br />
+                · 배포/코드 관리: GitHub + (추후 클라우드 배포를 전제로 설계)
+              </p>
+
               <div class="project-tags">
                 <span>Backend</span>
                 <span>LLM</span>
               </div>
               <div class="project-links">
-                <a href="https://github.com/rjaekawpxm1-netizen/portfolio" target="_blank">GITHUB</a>
+                <a href="https://github.com/rjaekawpxm1-netizen/portfolio" target="_blank">GITHUB 레포 바로가기</a>
               </div>
             </div>
           </article>
 
-          <!-- 온라인 매출 분석 -->
+          <!-- 프로젝트 5: 온라인 매출 분석 -->
           <article class="project-item">
             <div class="project-icon">📊</div>
             <div class="project-content">
               <div class="project-meta">2024.11 – 2024.12</div>
               <h3 class="project-title">온라인 매출 분석 & 대시보드 (더미데이터)</h3>
               <p class="project-company">개인 프로젝트</p>
+
               <p class="project-desc">
-                더미데이터를 이용해 온라인 쇼핑몰의 매출·재구매율·주요 상품을 분석하고,
-                운영자가 보는 KPI 중심으로 대시보드를 구성했습니다.
+                <b>1. 어떤 걸 만든 건지</b><br />
+                더미데이터를 활용해 온라인 쇼핑몰의 매출, 상품별 판매 추이, 재구매율을 분석하고<br />
+                운영자가 보는 KPI 중심의 대시보드를 구성한 프로젝트입니다.
               </p>
+
+              <p class="project-desc">
+                <b>2. 왜 만들었는지</b><br />
+                수많은 매출 리포트가 있지만, 실제로 운영자가 보고 싶은 지표는 한정적입니다.<br />
+                이 프로젝트에서는 <b>“운영자가 매일 아침 한눈에 보고 싶은 화면”</b>을 상상하며
+                지표를 최소화하고, 흐름 위주로 볼 수 있도록 차별화했습니다.
+              </p>
+
               <p class="project-detail">
-                <b>기술 스택 :</b> Python, Pandas, SQLite, Power BI<br />
-                <b>내 역할 :</b> 데이터 모델 설계, KPI 정의, 대시보드 페이지 구성
+                <b>3. 내가 맡은 역할</b><br />
+                · 더미데이터 스키마 설계 및 생성<br />
+                · 매출/재구매율/KPI 정의 및 계산 로직 구현<br />
+                · Power BI 대시보드 페이지 구성
               </p>
+
+              <p class="project-detail">
+                <b>4. 인프라 구성</b><br />
+                · 데이터 저장: SQLite<br />
+                · 분석: Python + Pandas<br />
+                · 시각화: Power BI<br />
+                · 코드/쿼리 관리: GitHub 레포지토리
+              </p>
+
               <div class="project-tags">
                 <span>Analytics</span>
                 <span>Dashboard</span>
               </div>
               <div class="project-links">
-                <a href="https://github.com/rjaekawpxm1-netizen/portfolio" target="_blank">GITHUB</a>
+                <a href="https://github.com/rjaekawpxm1-netizen/portfolio" target="_blank">GITHUB 레포 바로가기</a>
               </div>
             </div>
           </article>
 
-        </div>
-      </div>
-    </section>
-
-    <!-- Skills -->
-    <section id="skills" class="section">
-      <div class="container">
-        <h2 class="section-title">Skills</h2>
-        <div class="skills-grid">
-          <div>
-            <h3>Backend & API</h3>
-            <p>Python, FastAPI, JWT 인증, REST API 설계</p>
-          </div>
-          <div>
-            <h3>Data & Analytics</h3>
-            <p>Pandas, SQL, SQLite, Power BI, Tableau</p>
-          </div>
-          <div>
-            <h3>Tools</h3>
-            <p>Git / GitHub, Jupyter Notebook, Streamlit</p>
-          </div>
         </div>
       </div>
     </section>
@@ -263,6 +328,5 @@
     </section>
   </main>
 
-  <script src="js/main.js"></script>
 </body>
 </html>
