--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- About -->
     <section id="about" class="section">
       <div class="container">
-        <h2 class="section-title">About</h2>
+        <h2 class="section-title about-title">About</h2>
         <p class="section-text">
           공공데이터와 웹 데이터를 활용해 <b>“어떤 문제를 해결할 것인지”</b>를 먼저 정의하고,
           그에 맞는 데이터 수집·전처리·분석 과정을 설계합니다. <br />
