--- a/index.html
+++ b/index.html
@@ -55,16 +55,33 @@
     <!-- About -->
     <section id="about" class="section">
       <div class="container">
+
         <h2 class="section-title about-title">— About</h2>
-        <img src="images/myphoto.png" class="profile-photo" alt="profile">
-        <p class="section-text">
-          공공데이터와 웹 데이터를 활용해 <b>“어떤 문제를 해결할 것인지”</b>를 먼저 정의하고,
-          그에 맞는 데이터 수집·전처리·분석 과정을 설계합니다. <br />
-          단순 리포트 작성에서 끝나지 않고,
-          <b>웹 서비스나 대시보드 형태</b>로 실제 사용자가 쓸 수 있는 결과물을 만드는 것을 목표로 합니다.
-        </p>
+
+        <div class="about-wrapper">
+
+          <!-- 왼쪽: 큰 사진 -->
+          <img src="images/profile.jpg" class="profile-big" alt="profile">
+
+          <!-- 오른쪽: 짧은 소개 3–4줄 -->
+          <div class="about-text">
+            <p>
+              공공데이터와 웹 데이터를 활용해 <b>“어떤 문제를 해결할 것인지”</b>를 먼저 정의합니다.
+            </p>
+            <p>
+              그에 맞는 데이터 수집·전처리·분석 과정을 설계하고,
+              실제 사용자에게 도움이 되는 결과를 만드는 것을 목표로 합니다.
+            </p>
+            <p>
+              단순 리포트가 아닌, <b>웹 서비스/대시보드 형태</b>로 구현하는 작업을 좋아합니다.
+            </p>
+          </div>
+
+        </div>
+
       </div>
     </section>
+
 
     <!-- Projects -->
     <section id="projects" class="section section-projects">
