--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="about-wrapper">
 
           <!-- 왼쪽: 큰 사진 -->
-          <img src="images/profile.jpg" class="profile-big" alt="profile">
+          <img src="images/myphoto.png" class="profile-big" alt="profile">
 
           <!-- 오른쪽: 짧은 소개 3–4줄 -->
           <div class="about-text">
