--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <!-- 카드 2: 뉴스 감성 분석 -->
             <a
               class="project-card"
-              href="ppt/naver_sentiment.pdf"
+              href="https://www.miricanvas.com/login?redirect=%2Fv2%2Fdesign2%2Fe9b79c16-2f33-46ff-941f-78cb3854462a%3Flocation%3Ddesign%26type%3Dcopy_link%26access%3Dlink%26permission%3Dviewer"
               target="_blank"
             >
               <img src="images/proj_sentiment.png" alt="네이버 뉴스 댓글 감성 분석" />
