--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p class="hero-eyebrow">HEY! I AM</p>
           <h1 class="hero-name">이준수</h1>
           <p class="hero-role">
-            I'm a <span>데이터 분석 & 백엔드 개발자</span>
+             <span>데이터 분석가</span>
           </p>
           <p class="hero-desc">
             데이터로 문제를 정의하고,<br />
@@ -110,7 +110,7 @@
             <!-- 카드 2: 뉴스 감성 분석 -->
             <a
               class="project-card"
-              href="https://www.miricanvas.com/login?redirect=%2Fv2%2Fdesign2%2Fe9b79c16-2f33-46ff-941f-78cb3854462a%3Flocation%3Ddesign%26type%3Dcopy_link%26access%3Dlink%26permission%3Dviewer"
+              href="ppt/naver_sentiment.pdf"
               target="_blank"
             >
               <img src="images/proj_sentiment.png" alt="네이버 뉴스 댓글 감성 분석" />
