--- a/index.html
+++ b/index.html
@@ -95,17 +95,24 @@
           <div class="project-card-grid">
 
             <!-- 카드 1: 청주 교통사고 -->
-            <a
-              class="project-card"
-              href="ppt/cheongju_traffic.pdf"   <!-- 👉 여기 PPT 경로로 바꾸면 됨 -->
-              target="_blank"
-            >
-              <img src="images/proj_cheongju.png" alt="청주 교통사고 위험도 분석" />
-              <div class="project-card-body">
-                <h3>청주 교통사고 위험도 분석</h3>
-                <p>LLM 요약 · Streamlit 서비스</p>
-              </div>
-            </a>
+            <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
+
+            <!-- 카드 상단 제목 영역 -->
+            <div class="card-header">
+            CHEONGJU TRAFFIC RISK
+            </div>
+
+            <!-- 이미지 -->
+            <img src="images/proj_cheongju.png" alt="청주 교통사고 위험도 분석" />
+
+            <!-- 본문 -->
+            <div class="project-card-body">
+            <h3>청주 교통사고 위험도 분석</h3>
+            <p>LLM 요약 · Streamlit 서비스</p>
+           </div>
+
+        </a>
+
 
             <!-- 카드 2: 뉴스 감성 분석 -->
             <a
