--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <!-- 카드 상단 제목 영역 -->
             <div class="card-header">
-            CHEONGJU TRAFFIC RISK
+            청주 교통사고 분석
             </div>
 
             <!-- 이미지 -->
@@ -114,44 +114,57 @@
         </a>
 
 
-            <!-- 카드 2: 뉴스 감성 분석 -->
-            <a
-              class="project-card"
-              href="ppt/naver_sentiment.pdf"
-              target="_blank"
-            >
-              <img src="images/proj_sentiment.png" alt="네이버 뉴스 댓글 감성 분석" />
-              <div class="project-card-body">
-                <h3>네이버 뉴스 댓글 감성 분석</h3>
-                <p>크롤링 · NLP · 대시보드</p>
-              </div>
-            </a>
+             <!-- 카드 2: 청주 교통사고 -->
+            <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
 
-            <!-- 카드 3: 주문 데이터 RPA -->
-            <a
-              class="project-card"
-              href="ppt/order_rpa.pdf"
-              target="_blank"
-            >
-              <img src="images/proj_rpa.png" alt="주문 데이터 자동 수집 RPA" />
-              <div class="project-card-body">
-                <h3>주문 데이터 자동 수집 RPA</h3>
-                <p>매출 리포트 · Slack 알림</p>
-              </div>
-            </a>
+            <!-- 카드 상단 제목 영역 -->
+            <div class="card-header">
+            네이버 뉴스 댓글 감정 분석
+            </div>
+
+            <!-- 이미지 -->
+            <img src="images/proj_sentiment.png" alt="청주 교통사고 위험도 분석" />
+
+            <!-- 본문 -->
+            <div class="project-card-body">
+            <h3>네이버 뉴스 댓글 감성 분석/h3>
+            <p>LLM 요약 · Streamlit 서비스</p>
+           </div>
+
+
+             <!-- 카드 3: 주문 자동화 -->
+            <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
+
+            <!-- 카드 상단 제목 영역 -->
+            <div class="card-header">
+            cd
+            </div>
+
+            <!-- 이미지 -->
+            <img src="images/proj_cheongju.png" alt="cf" />
+
+            <!-- 본문 -->
+            <div class="project-card-body">
+            <h3>cf/h3>
+            <p>LLM 요약 · Streamlit 서비스</p>
+           </div>
 
             <!-- 카드 4: AI 스트레스 분석 앱 -->
-            <a
-              class="project-card"
-              href="ppt/stress_app.pdf"
-              target="_blank"
-            >
-              <img src="images/proj_stress.png" alt="AI 기반 스트레스 분석 앱" />
-              <div class="project-card-body">
-                <h3>AI 기반 스트레스 분석 앱</h3>
-                <p>텍스트 기반 스트레스 분석</p>
-              </div>
-            </a>
+            <a class="project-card" href="ppt/stress_app.pdf" target="_blank">
+
+            <!-- 카드 상단 제목 영역 -->
+            <div class="card-header">
+            AI 스트레스 분석 앱
+            </div>
+
+            <!-- 이미지 -->
+            <img src="images/proj_cheongju.png" alt="cf" />
+
+            <!-- 본문 -->
+            <div class="project-card-body">
+            <h3>cf/h3>
+            <p>LLM 요약 · Streamlit 서비스</p>
+           </div>
 
             <!-- 카드 5: 온라인 매출 분석 -->
             <a
