--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <div class="hero-inner">
         <div class="hero-left"></div>
         <div class="hero-center">
-          <p class="hero-eyebrow">HEY! I AM</p>
+          <p class="hero-eyebrow"></p>
           <h1 class="hero-name">이준수</h1>
           <p class="hero-role">
-             <span>데이터 분석가</span>
+             <span>데이터 분석 & 개발</span>
           </p>
           <p class="hero-desc">
             데이터로 문제를 정의하고,<br />
@@ -137,7 +137,7 @@
 
             <!-- 카드 상단 제목 영역 -->
             <div class="card-header">
-            cd
+            주문 자동화 RPA
             </div>
 
             <!-- 이미지 -->
@@ -167,16 +167,21 @@
            </div>
 
             <!-- 카드 5: 온라인 매출 분석 -->
-            <a
-              class="project-card"
-              href="ppt/online_sales.pdf"
-              target="_blank"
-            >
-              <img src="images/proj_sales.png" alt="온라인 매출 분석 대시보드" />
-              <div class="project-card-body">
-                <h3>온라인 매출 분석 대시보드</h3>
-                <p>더미데이터 · Power BI</p>
-              </div>
+            <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
+
+            <!-- 카드 상단 제목 영역 -->
+            <div class="card-header">
+            온라인 매출분석-더미데이터
+            </div>
+
+            <!-- 이미지 -->
+            <img src="images/proj_cheongju.png" alt="온라인 매출분석" />
+
+            <!-- 본문 -->
+            <div class="project-card-body">
+            <h3>온라인 매출분석</h3>
+            <p>LLM 요약 · Streamlit 서비스</p>
+           </div>
             </a>
 
           </div>
