--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
            </div>
 
 
-             <!-- 카드 3: 주문 자동화 -->
+            <!-- 카드 2: 청주 교통사고 -->
             <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
 
             <!-- 카드 상단 제목 영역 -->
@@ -141,11 +141,11 @@
             </div>
 
             <!-- 이미지 -->
-            <img src="images/proj_cheongju.png" alt="cf" />
+            <img src="images/proj_rpa.png" alt="주문 자동화 RPA" />
 
             <!-- 본문 -->
             <div class="project-card-body">
-            <h3>cf/h3>
+            <h3>주문 자동화 RPA</h3>
             <p>LLM 요약 · Streamlit 서비스</p>
            </div>
 
