--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </a>
 
 
-             <!-- 카드 2: 청주 교통사고 -->
+             <!-- 카드 2: 네이버 뉴스 댓글 감정 분석 -->
             <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
 
             <!-- 카드 상단 제목 영역 -->
@@ -132,7 +132,7 @@
            </div>
 
 
-            <!-- 카드 2: 청주 교통사고 -->
+            <!-- 카드 3: 주문자동화 -->
             <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
 
             <!-- 카드 상단 제목 영역 -->
@@ -158,11 +158,11 @@
             </div>
 
             <!-- 이미지 -->
-            <img src="images/proj_cheongju.png" alt="cf" />
+            <img src="images/proj_stress.png" alt="cf" />
 
             <!-- 본문 -->
             <div class="project-card-body">
-            <h3>cf/h3>
+            <h3>AI 스트레스 분석 앱</h3>
             <p>LLM 요약 · Streamlit 서비스</p>
            </div>
 
@@ -175,7 +175,7 @@
             </div>
 
             <!-- 이미지 -->
-            <img src="images/proj_cheongju.png" alt="온라인 매출분석" />
+            <img src="images/proj_shopping.png" alt="온라인 매출분석" />
 
             <!-- 본문 -->
             <div class="project-card-body">
