--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="project-card-grid">
 
             <!-- 카드 1: 청주 교통사고 -->
-            <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
+            <a class="project-card" href="ppt/cheongju.pdf" target="_blank">
 
             <!-- 카드 상단 제목 영역 -->
             <div class="card-header">
@@ -130,6 +130,7 @@
             <h3>네이버 뉴스 댓글 감성 분석/h3>
             <p>LLM 요약 · Streamlit 서비스</p>
            </div>
+        </a>
 
 
             <!-- 카드 3: 주문자동화 -->
@@ -148,6 +149,7 @@
             <h3>주문 자동화 RPA</h3>
             <p>LLM 요약 · Streamlit 서비스</p>
            </div>
+        </a>
 
             <!-- 카드 4: AI 스트레스 분석 앱 -->
             <a class="project-card" href="ppt/stress_app.pdf" target="_blank">
@@ -165,6 +167,7 @@
             <h3>AI 스트레스 분석 앱</h3>
             <p>LLM 요약 · Streamlit 서비스</p>
            </div>
+        </a>
 
             <!-- 카드 5: 온라인 매출 분석 -->
             <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
@@ -182,7 +185,7 @@
             <h3>온라인 매출분석</h3>
             <p>LLM 요약 · Streamlit 서비스</p>
            </div>
-            </a>
+        </a>
 
           </div>
         </div>
