--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             <a href="https://github.com/rjaekawpxm1-netizen/portfolio"
                target="_blank" class="btn ghost">
               GitHub 포트폴리오
+            <a href="https://github.com/rjaekawpxm1-netizen/portfolio"
+               target="_blank" class="btn ghost">
+              이력서 보기 
+              
             </a>
           </div>
         </div>
