--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <a href="https://github.com/rjaekawpxm1-netizen/portfolio"
                target="_blank" class="btn ghost">
               GitHub 포트폴리오
-            <a href="https://github.com/rjaekawpxm1-netizen/portfolio"
-               target="_blank" class="btn ghost">
+            <a href="ppt/profile.pdf"
+               target="_blank" class="btn primary">
               이력서 보기 
               
             </a>
