--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 
              <!-- 카드 2: 네이버 뉴스 댓글 감정 분석 -->
-            <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
+            <a class="project-card" href="ppt/news.pdf" target="_blank">
 
             <!-- 카드 상단 제목 영역 -->
             <div class="card-header">
