--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
            </a>
 
             <!-- 카드 4: AI 스트레스 분석 앱 -->
-            <a class="project-card" href="ppt/stress_app.pdf" target="_blank">
+            <a class="project-card" href="ppt/stress.pdf" target="_blank">
 
             <!-- 카드 상단 제목 영역 -->
             <div class="card-header">
