--- a/index.html
+++ b/index.html
@@ -98,12 +98,50 @@
         <div class="projects-list">
           <div class="project-card-grid">
 
-            <!-- 카드 1: 청주 교통사고 -->
+            <!-- 카드 1: AI 스트레스 분석 앱 -->
+            <a class="project-card" href="ppt/stress.pdf" target="_blank">
+
+            <!-- 카드 상단 제목 영역 -->
+            <div class="card-header">
+            AI 스트레스 분석 앱
+            </div>
+
+            <!-- 이미지 -->
+            <img src="images/proj_stress.png" alt="AI 스트레스 분석 앱" />
+
+            <!-- 본문 -->
+            <div class="project-card-body">
+            <h3>AI 스트레스 분석 앱</h3>
+            <p>LLM 요약 · Streamlit 서비스</p>
+           </div>
+           </a>
+
+
+             <!-- 카드 2: 호텔 위험도 분석 -->
+            <a class="project-card" href="ppt/hotel.pdf" target="_blank">
+
+            <!-- 카드 상단 제목 영역 -->
+            <div class="card-header">
+            호텔 위험도 분석
+            </div>
+
+            <!-- 이미지 -->
+            <img src="images/proj_hotel.png" alt="청주 교통사고 위험도 분석" />
+
+            <!-- 본문 -->
+            <div class="project-card-body">
+            <h3>네이버 뉴스 댓글 감성 분석/h3>
+            <p>LLM 요약 · Streamlit 서비스</p>
+           </div>
+           </a>
+
+
+            <!-- 카드 3: 청주교통사고-->
             <a class="project-card" href="ppt/cheongju.pdf" target="_blank">
 
             <!-- 카드 상단 제목 영역 -->
             <div class="card-header">
-            청주 교통사고 분석
+            주문 자동화 RPA
             </div>
 
             <!-- 이미지 -->
@@ -116,76 +154,20 @@
            </div>
            </a>
 
-
-             <!-- 카드 2: 네이버 뉴스 댓글 감정 분석 -->
+            <!-- 카드 4: 뉴스댓글-->
             <a class="project-card" href="ppt/news.pdf" target="_blank">
 
             <!-- 카드 상단 제목 영역 -->
             <div class="card-header">
-            네이버 뉴스 댓글 감정 분석
+            네이버 뉴스 댓글 감성 분석
             </div>
 
             <!-- 이미지 -->
-            <img src="images/proj_sentiment.png" alt="청주 교통사고 위험도 분석" />
+            <img src="images/proj_sentiment.png" alt="cf" />
 
             <!-- 본문 -->
             <div class="project-card-body">
-            <h3>네이버 뉴스 댓글 감성 분석/h3>
-            <p>LLM 요약 · Streamlit 서비스</p>
-           </div>
-           </a>
-
-
-            <!-- 카드 3: 주문자동화 -->
-            <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
-
-            <!-- 카드 상단 제목 영역 -->
-            <div class="card-header">
-            주문 자동화 RPA
-            </div>
-
-            <!-- 이미지 -->
-            <img src="images/proj_rpa.png" alt="주문 자동화 RPA" />
-
-            <!-- 본문 -->
-            <div class="project-card-body">
-            <h3>주문 자동화 RPA</h3>
-            <p>LLM 요약 · Streamlit 서비스</p>
-           </div>
-           </a>
-
-            <!-- 카드 4: AI 스트레스 분석 앱 -->
-            <a class="project-card" href="ppt/stress.pdf" target="_blank">
-
-            <!-- 카드 상단 제목 영역 -->
-            <div class="card-header">
-            AI 스트레스 분석 앱
-            </div>
-
-            <!-- 이미지 -->
-            <img src="images/proj_stress.png" alt="cf" />
-
-            <!-- 본문 -->
-            <div class="project-card-body">
-            <h3>AI 스트레스 분석 앱</h3>
-            <p>LLM 요약 · Streamlit 서비스</p>
-           </div>
-           </a>
-
-            <!-- 카드 5: 온라인 매출 분석 -->
-            <a class="project-card" href="ppt/cheongju_traffic.pdf" target="_blank">
-
-            <!-- 카드 상단 제목 영역 -->
-            <div class="card-header">
-            온라인 매출분석-더미데이터
-            </div>
-
-            <!-- 이미지 -->
-            <img src="images/proj_shopping.png" alt="온라인 매출분석" />
-
-            <!-- 본문 -->
-            <div class="project-card-body">
-            <h3>온라인 매출분석</h3>
+            <h3>네이버 뉴스 댓글 감성 분석</h3>
             <p>LLM 요약 · Streamlit 서비스</p>
            </div>
            </a>
