--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
 
             <!-- 이미지 -->
-            <img src="images/proj_sentiment.png" alt="cf" />
+            <img src="images/proj_news.png" alt="cf" />
 
             <!-- 본문 -->
             <div class="project-card-body">
