--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
              <span>데이터 분석 & 개발</span>
           </p>
           <p class="hero-desc">
-            데이터로 문제를 정의하고,<br />
-            서비스까지 연결해서 해결하는 것을 좋아합니다.
+            데이터로 문제를 구조화하고,<br />
+            인사이트를 서비스로 연결합니다.
           </p>
 
           <div class="hero-buttons">
